# three-miso

./: README.md  cabal.project  flake.nix  three-miso.cabal
src/: FFI.hs  Main.hs  Model.hs  MyThree.hs
static/: import-three.js  index.html
