cabal-version:          3.0
name:                   three-miso
version:                0.2

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall -fdicts-cheap -fexpose-all-unfoldings

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm, warnings
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Model MyThree FFI
  build-depends:
    base, containers, miso >=1.11 && <2.0, three
  default-language:
    GHC2024
  default-extensions:
    CPP TemplateHaskell
